--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,6 +122,7 @@ footer {
     border-top: solid 1px rgb(47, 48, 49);
     border-bottom: solid 1px rgb(47, 48, 49);
     p {
+      font-size: 14px;
       color: rgb(80, 90, 100);
     }
   }
